# xonix-sfml-game

./: .gitignore  Auth.cpp  Auth.h  BUILD_AND_CHANGES.txt  CMakeLists.txt  Enemy.cpp  Enemy.h  FriendsManager.cpp  FriendsManager.h  FriendsState.cpp  FriendsState.h  Game.cpp  Game.h  GameData.h  GameLogic.cpp  GameLogic.h  GameRoomState.cpp  GameRoomState.h  GameState.cpp  GameState.cpp.bak  GameState.h  GameState.h.bak  Inventory.cpp  Inventory.h  Leaderboard.cpp  Leaderboard.h  LeaderboardState.cpp  LeaderboardState.h  LoginState.cpp  LoginState.h  MainMenuState.cpp  MainMenuState.h  MatchResultState.cpp  MatchResultState.h  MatchmakingQueue.cpp  MatchmakingQueue.h  MultiplayerMenuState.cpp  MultiplayerMenuState.h  Player.cpp  Player.h  (+18 more)
